@@ -95,7 +95,7 @@ class HourglassControllerRoot extends BaseController {
 
 		// Extract parameters from from
 		$this->pid        =safe_GET_xref('pid');
-		$this->show_full  =safe_GET('show_full',   '1', '0');
+		$this->show_full  =safe_GET('show_full',   '1', $PEDIGREE_FULL_DETAILS);
 		$this->show_spouse=safe_GET('show_spouse', '1', '0');
 		$this->generations=safe_GET_integer('generations', 2, $MAX_DESCENDANCY_GENERATIONS, 3);
 		$this->box_width  =safe_GET_integer('box_width',   50, 300, 100);
