@@ -76,7 +76,7 @@ class PedigreeControllerRoot extends BaseController {
 		}
 
 		$this->rootid    =safe_GET_xref('rootid');
-		$this->show_full =safe_GET('show_full', '1', '0');
+		$this->show_full =safe_GET('show_full', '1', $PEDIGREE_FULL_DETAILS);
 		$this->talloffset=safe_GET('talloffset', '1', '0');
 		$this->PEDIGREE_GENERATIONS=safe_GET_integer('PEDIGREE_GENERATIONS', 3, $MAX_PEDIGREE_GENERATIONS, $DEFAULT_PEDIGREE_GENERATIONS);
 
